# WutheringWavesTools

./: .gitignore  README.md  covert_guide.py  main.py  pyproject.toml  requirements.txt
app/: RESOURCE_PATH.py  api.py  char_model.py  echo_model.py  enhance.py  generate.py  material_model.py  utils.py  weapon_model.py
app/abstract/: abstract.py  abstract_char.py  abstract_echo.py  abstract_weapon.py  generate_char.py  generate_echo.py  generate_weapon.py
resource/: CharId2Data.json  char_alias.json  id2name.json  intensity_echo_detail.json  name2id.json  weaponData.json  weapon_alias.json
resource/detail_json/char/: 1102.json  1103.json  1104.json  1105.json  1106.json  1202.json  1203.json  1204.json  1205.json  1301.json  1302.json  1303.json  1304.json  1305.json  1402.json  1403.json  1404.json  1405.json  1409.json  1501.json  1503.json  1505.json  1601.json  1602.json  1605.json
resource/detail_json/weapon/: 20000110.json  21010011.json  21030026.json
resource/raw/: character.json  echo.json  item.json  weapon.json
resource/raw/resource/: 10800.json  10801.json  10802.json  10803.json  10804.json  10805.json  10806.json  10807.json  10808.json  10809.json  10810.json  10811.json  10812.json  10813.json  10814.json  10815.json  10816.json  10817.json  10818.json  11.json  1102.json  1103.json  1104.json  1105.json  1106.json  1107.json  12.json  1202.json  1203.json  1204.json  1205.json  1206.json  1207.json  1301.json  1302.json  1303.json  1304.json  1305.json  14.json  1402.json  (+1315 more)
