[project]
name = "wutheringwavestools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "pydantic>=2.10.5",
    "requests>=2.32.3",
    "aiohttp>=3.9.3",
    "aiofiles>=23.2.1",
]

[[tool.uv.index]]
url = "https://mirrors.volces.com/pypi/simple/"